# ttscmd

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .ignifi.yml  CMakeLists.txt  CREDITS.md  README.md  appcmd.pot  messages.po
.tx/: config
app/: CMakeLists.txt
app/clutts/: CMakeLists.txt
app/cluttsu/: CMakeLists.txt
app/include/: Application.h
app/src/: Application.cpp  main.cpp
cmake/: git.cmake  req.cmake  src.cmake  translate.cmake
include/clu/tts/: Version.h
include/io.jno/tts/: Export.h  Speech.h  Unicode.h  Version.h  Voices.h
include/io_jno/tts/: Speech.h  Types.h  VoiceManager.h  Voices.h
include/ttscmd/: Export.h  Speech.h  Types.h  Unicode.h  Version.h  VoiceManager.h  Voices.h
src/: Speech.cpp  VoiceManager.cpp  Voices.cpp
template/: Version.h.in
translate/: appcmd.pot  dll.pot
translate/appcmd/: fr.mo  fr.po
translate/ttscmd/: de.po  es.po  fr.po  it.po  pt.po  ru.po
